[package]
name = "gravity"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

[dependencies]
piston_window = "0.85.0"
gfx_core = "0.8.3"
gfx_device_gl = "0.15.3"
piston2d-graphics = "0.28.0"
anymap = "0.12.1"
lazy_conf = {path = "../../mlibs/lazy_conf/"}
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
mksvg = { path = "../../mlibs/mksvg/"} 
